FStarC 의 모듈들...하나하나 구현중!

--- a/src/Nemonuri.RepoTools.FStar.BuildTasks/Nemonuri.RepoTools.FStar.BuildTasks.fsproj
+++ b/src/Nemonuri.RepoTools.FStar.BuildTasks/Nemonuri.RepoTools.FStar.BuildTasks.fsproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Theories.fs" />
+    <Compile Include="FStarC.fs" />
+    <Compile Include="ProjectSnapShots.fs" />
     <Compile Include="FStarOptionTheory.fs" />
     <Compile Include="FStarConfigJsonTheory.fs" />
     <Compile Include="FStarConfigJsonModel.fs" />
