--- a/src/Nemonuri.FStarDotNet/FStarC/Basic/Nemonuri.FStarDotNet.FStarC.Basic.fsproj
+++ b/src/Nemonuri.FStarDotNet/FStarC/Basic/Nemonuri.FStarDotNet.FStarC.Basic.fsproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Z.fs" />
-    <Compile Include="FStarC.Effect.fs" />
+    <Compile Include="FStarC.Effect.fs" /><Compile Include="FStarC.Char.fs" /><Compile Include="FStarC.BaseTypes.fs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FSharp.Core" />
