--- a/src/Nemonuri.FStarDotNet/Primitives/Nemonuri.FStarDotNet.Primitives.fsproj
+++ b/src/Nemonuri.FStarDotNet/Primitives/Nemonuri.FStarDotNet.Primitives.fsproj
@@ -7,7 +7,7 @@
   <ItemGroup>
     <Compile Include="Z.fs" />
     
-    <Compile Include="Prims.fs" />
+    <Compile Include="Prims.fs" /><Compile Include="FStar.Pervasives.Native.fs" /><Compile Include="FStar.All.fs" /><Compile Include="FStar.Char.fs" /><Compile Include="FStar.Dyn.fs" /><Compile Include="FStar.Float.fs" /><Compile Include="FStar.UInt8.fs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FSharp.Core" />
