fsharp static resolve 기능 은근 불편하네? - 정작 static 타입의, static member 를 제약 조건으로 사용할 수 없다고??

--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -29,5 +29,6 @@
     <PackageVersion Include="MSBuild.ProjectCreation" Version="17.0.1" />
     <PackageVersion Include="ThisAssembly.Constants" Version="2.1.2" />
     <PackageVersion Include="System.Text.Json" Version="10.0.2" />
+    <PackageVersion Include="FSharpPlus" Version="1.9.1" />
   </ItemGroup>
 </Project>
