뭐야, 결국 EuclidTheory 도 필요 없었나....지우자

--- a/src/Nemonuri.FStarDotNet/Primitives/Nemonuri.FStarDotNet.Primitives.fsproj
+++ b/src/Nemonuri.FStarDotNet/Primitives/Nemonuri.FStarDotNet.Primitives.fsproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
   <!-- Reference: https://github.com/FStarLang/FStar/blob/v2025.12.15/fsharp/ulibfs.fsproj -->
   <ItemGroup>
-    <Compile Include="EuclidTheory.fs" />
+    
     <Compile Include="Z.fs" />
     <Compile Include="Prims.fs" />
     <Compile Include="FStar.Pervasives.Native.fs" />
@@ -13,7 +13,7 @@
     <Compile Include="FStar.Char.fs" />
     <Compile Include="FStar.Dyn.fs" />
     <Compile Include="FStar.Float.fs" />
-    <Compile Include="FStar.UInt8.fs" />
+    <Compile Include="FStar.UInt8.fs" /><Compile Include="FStar.Int8.fs" /><Compile Include="FStar.Int16.fs" /><Compile Include="FStar.UInt16.fs" /><Compile Include="FStar.Int32.fs" /><Compile Include="FStar.Int64.fs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FSharp.Core" />
