--- a/src/Nemonuri.FStarDotNet/FStarC/Basic/Nemonuri.FStarDotNet.FStarC.Basic.fsproj
+++ b/src/Nemonuri.FStarDotNet/FStarC/Basic/Nemonuri.FStarDotNet.FStarC.Basic.fsproj
@@ -4,10 +4,17 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Z.fs" />
-    <Compile Include="FStarC.Effect.fs" /><Compile Include="FStarC.Char.fs" /><Compile Include="FStarC.BaseTypes.fs" />
+    <Compile Include="Compatibility.fs" />
+    <Compile Include="FStarC.Effect.fs" />
+    <Compile Include="FStarC.Char.fs" />
+    <Compile Include="FStarC.BaseTypes.fs" />
+    <Compile Include="FStarC.Getopt.fs" /><Compile Include="FStarC.VConfig.fs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FSharp.Core" />
+    <PackageReference Include="FSharp.Compatibility.OCaml" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Primitives\Nemonuri.FStarDotNet.Primitives.fsproj" />
   </ItemGroup>
 </Project>
