--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -25,6 +25,7 @@
     <PackageVersion Include="xunit.v3.mtp-v2" Version="3.2.2" />
     <PackageVersion Include="Polyfill" Version="9.7.3" />
     <PackageVersion Include="CommunityToolkit.Diagnostics" Version="8.4.0" />
+    <PackageVersion Include="CommunityToolkit.HighPerformance" Version="8.4.0" />
     <PackageVersion Include="Moq" Version="4.20.72" />
     <PackageVersion Include="MSBuild.ProjectCreation" Version="17.0.1" />
     <PackageVersion Include="ThisAssembly.Constants" Version="2.1.2" />
