Nemonuri.OCamlDotNet.Primitives - 일단 빌드 성공! - 테스트는...해야겠지?

--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -35,5 +35,6 @@
     <PackageVersion Include="System.Memory" Version="4.6.3" />
     <PackageVersion Include="PolySharp" Version="1.15.0" />
     <PackageVersion Include="Shim.System.Text.Rune" Version="6.0.2" />
+    <PackageVersion Include="System.Collections.Immutable" Version="10.0.2" />
   </ItemGroup>
 </Project>
