Custom Serializer 를 이용한 테스트도 성공!

--- a/src/test/Nemonuri.OCamlDotNet.Primitives.UnitTests/Nemonuri.OCamlDotNet.Primitives.UnitTests.csproj
+++ b/src/test/Nemonuri.OCamlDotNet.Primitives.UnitTests/Nemonuri.OCamlDotNet.Primitives.UnitTests.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <PackageReference Include="xunit.v3.mtp-v2" />
+    <PackageReference Include="PolySharp" Condition="$(TargetFramework) == 'net472'" />
   </ItemGroup>
 
   <ItemGroup>
