자동으로 reportgenerator 를 발동시키는 방법도 있겠지. 나중에 찾아보자.

--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -36,5 +36,6 @@
     <PackageVersion Include="PolySharp" Version="1.15.0" />
     <PackageVersion Include="Shim.System.Text.Rune" Version="6.0.2" />
     <PackageVersion Include="System.Collections.Immutable" Version="10.0.2" />
+    <PackageVersion Include="Microsoft.Testing.Extensions.CodeCoverage" Version="18.4.1" />
   </ItemGroup>
 </Project>
