.....'TheoryData Builder' 라도 만들어야 하나...?

--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -23,6 +23,7 @@
     <PackageVersion Include="Microsoft.Build.Utilities.Core" Version="$(__MSBuildPackageVersion)" />
     <PackageVersion Include="FSharp.Core" Version="10.0.102" />
     <PackageVersion Include="xunit.v3.mtp-v2" Version="3.2.2" />
+    <PackageVersion Include="xunit.v3.common" Version="3.2.2" />
     <PackageVersion Include="Polyfill" Version="9.7.3" />
     <PackageVersion Include="CommunityToolkit.Diagnostics" Version="8.4.0" />
     <PackageVersion Include="CommunityToolkit.HighPerformance" Version="8.4.0" />
