--- a/src/test/Nemonuri.OCamlDotNet.Core.UnitTests/Nemonuri.OCamlDotNet.Core.UnitTests.fsproj
+++ b/src/test/Nemonuri.OCamlDotNet.Core.UnitTests/Nemonuri.OCamlDotNet.Core.UnitTests.fsproj
@@ -1,31 +1,24 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Nemonuri.OCamlDotNet.Primitives.UnitTests</RootNamespace>
+    <RootNamespace>Nemonuri.OCamlDotNet.Core.UnitTests</RootNamespace>
     <TargetFrameworks>net10.0;net472</TargetFrameworks>
     <TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport>
-    <LangVersion>14</LangVersion>
   </PropertyGroup>
-
   <ItemGroup>
     <Content Include="xunit.runner.json" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
-
   <ItemGroup>
-    <Using Include="Xunit" />
+    <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="Char_AsciiTest.fs" />
   </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="xunit.v3.mtp-v2" />
-    <PackageReference Include="PolySharp" Condition="$(TargetFramework) == 'net472'" />
+    <PackageReference Include="FSharp.Core" />
   </ItemGroup>
-
   <ItemGroup>
-    <ProjectReference Include="..\..\Nemonuri.OCamlDotNet\Primitives\Nemonuri.OCamlDotNet.Primitives.csproj" />
+    <ProjectReference Include="..\..\Nemonuri.OCamlDotNet\Core\Nemonuri.OCamlDotNet.Core.fsproj" />
     <ProjectReference Include="..\..\Nemonuri.OCamlDotNet\Xunit\Nemonuri.OCamlDotNet.Xunit.csproj" />
   </ItemGroup>
-
 </Project>
