--- a/src/test/Nemonuri.OCamlDotNet.Core.UnitTests/Nemonuri.OCamlDotNet.Core.UnitTests.fsproj
+++ b/src/test/Nemonuri.OCamlDotNet.Core.UnitTests/Nemonuri.OCamlDotNet.Core.UnitTests.fsproj
@@ -11,6 +11,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="TheoryDataBuilder.fs" />
     <Compile Include="Char_AsciiTest.fs" />
   </ItemGroup>
   <ItemGroup>
