뭐 이 정도 Syntax면...대략 만족스럽다?

--- a/src/test/Nemonuri.OCamlDotNet.Core.UnitTests/Nemonuri.OCamlDotNet.Core.UnitTests.fsproj
+++ b/src/test/Nemonuri.OCamlDotNet.Core.UnitTests/Nemonuri.OCamlDotNet.Core.UnitTests.fsproj
@@ -11,7 +11,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="TheoryDataBuilder.fs" />
+    <Compile Include="TheoryDataTheory.fs" />
     <Compile Include="Char_AsciiTest.fs" />
   </ItemGroup>
   <ItemGroup>
