--- a/src/Nemonuri.OCamlDotNet/Zarith/Nemonuri.OCamlDotNet.Zarith.fsproj
+++ b/src/Nemonuri.OCamlDotNet/Zarith/Nemonuri.OCamlDotNet.Zarith.fsproj
@@ -1,15 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
+
   <ItemGroup>
-    <Compile Include="Prelude.fs" />
-    <Compile Include="Char.fs" />
-    <Compile Include="Sys.fs" />
-    <Compile Include="String.fs" />
+    <Compile Include="Z.fs" />
   </ItemGroup>
+
   <ItemGroup>
-    <ProjectReference Include="..\Primitives\Nemonuri.OCamlDotNet.Primitives.csproj" />
+    <ProjectReference Include="..\Core\Nemonuri.OCamlDotNet.Core.fsproj" />
   </ItemGroup>
+
 </Project>
