--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -38,5 +38,7 @@
     <PackageVersion Include="Shim.System.Text.Rune" Version="6.0.2" />
     <PackageVersion Include="System.Collections.Immutable" Version="10.0.2" />
     <PackageVersion Include="Microsoft.Testing.Extensions.CodeCoverage" Version="18.4.1" />
+    <PackageVersion Include="System.Numerics.Tensors" Version="10.0.2" />
+    <PackageVersion Include="Microsoft.Bcl.Memory" Version="10.0.2" />
   </ItemGroup>
 </Project>
