OCaml char 과 string 을 다시 작성....완료!

--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -61,7 +61,15 @@
     <!-- 와, win-x64 에서, linux-musl-arm 으로 R2R 컴파일이 되네? 하지만 ILSpy가 정작 지원을 안 하는군.. -->
     <RuntimeIdentifier Condition="$(RuntimeIdentifier) == ''">linux-musl-x64</RuntimeIdentifier> 
     <PublishReadyToRunEmitSymbols>true</PublishReadyToRunEmitSymbols>
-    <PublishReadyToRunCrossgen2ExtraArgs>$(PublishReadyToRunCrossgen2ExtraArgs)--compilebubblegenerics;--fulllog;--verbose;--map</PublishReadyToRunCrossgen2ExtraArgs>
+    <PublishReadyToRunCrossgen2ExtraArgs>$(PublishReadyToRunCrossgen2ExtraArgs)--compilebubblegenerics;--fulllog;--verbose;--map;--embed-pgo-data;--enable-cached-interface-dispatch-support</PublishReadyToRunCrossgen2ExtraArgs>
   </PropertyGroup>
+
+  <Choose>
+    <When Condition="$([MSBuild]::IsTargetFrameworkCompatible('$(TargetFramework)', 'netstandard2.1'))">
+      <PropertyGroup>
+        <DefineConstants>$(DefineConstants);NETSTANDARD2_1_OR_GREATER</DefineConstants>
+      </PropertyGroup>
+    </When>
+  </Choose>
 
 </Project>
