--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -41,5 +41,6 @@
     <PackageVersion Include="System.Numerics.Tensors" Version="10.0.2" />
     <PackageVersion Include="Microsoft.Bcl.Memory" Version="10.0.2" />
     <PackageVersion Include="System.Runtime.CompilerServices.Unsafe" Version="6.1.2" />
+    <PackageVersion Include="Microsoft.Extensions.ObjectPool" Version="10.0.2" />
   </ItemGroup>
 </Project>
