--- a/src/test/Nemonuri.OCamlDotNet.Core.UnitTests/Nemonuri.OCamlDotNet.Core.UnitTests.fsproj
+++ b/src/test/Nemonuri.OCamlDotNet.Core.UnitTests/Nemonuri.OCamlDotNet.Core.UnitTests.fsproj
@@ -12,7 +12,7 @@
   <ItemGroup>
     
     <Compile Include="TheoryDataTheory.fs" />
-    <Compile Include="Char_AsciiTest.fs" />
+    <Compile Include="Char_AsciiTest.fs" /><Compile Include="CharTest.fs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="xunit.v3.mtp-v2" />
