Two's complement Negate Overflow - 이 문제를 이제서야 깨닫다니...?

--- a/src/Nemonuri.ByteChars/Nemonuri.ByteChars.csproj
+++ b/src/Nemonuri.ByteChars/Nemonuri.ByteChars.csproj
@@ -42,5 +42,9 @@
   <ItemGroup Condition="$([MSBuild]::IsTargetFrameworkCompatible('$(TargetFramework)', 'net8.0'))">
     <PackageReference Include="System.Numerics.Tensors" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <Folder Include="Numerics\" />
+  </ItemGroup>
 
 </Project>
