SplitReadOnlySpanResult.Enumerator 를 좀 더 '부작용 적은' 방식으로 바꿔야겠어!

--- a/src/Nemonuri.ByteChars/Nemonuri.ByteChars.csproj
+++ b/src/Nemonuri.ByteChars/Nemonuri.ByteChars.csproj
@@ -21,10 +21,7 @@
         </PolySharpIncludeGeneratedTypes>
         <PolySharpIncludeGeneratedTypes Condition="$(TargetFramework) == 'netstandard2.0'">
           $(PolySharpIncludeGeneratedTypes)
-          System.Index;
-          System.Range;
           System.Diagnostics.CodeAnalysis.NotNullWhenAttribute;
-          System.Diagnostics.CodeAnalysis.DoesNotReturnAttribute;
         </PolySharpIncludeGeneratedTypes>
       </PropertyGroup>
     </When>
@@ -38,6 +35,7 @@
 
   <ItemGroup Condition="$(TargetFramework.ToLowerInvariant().StartsWith('netstandard2.'))">
     <PackageReference Include="System.Collections.Immutable" />
+    <PackageReference Include="Microsoft.Bcl.Memory" />
     <ProjectReference Include="..\Nemonuri.NetStandards\Core\Nemonuri.NetStandards.Core.csproj" />
     <ProjectReference Include="..\Nemonuri.NetStandards\Numerics\Nemonuri.NetStandards.Numerics.csproj" />
     <ProjectReference Include="..\Nemonuri.NetStandards\Memory\Nemonuri.NetStandards.Memory.csproj" />
