Nemonuri.OCamlDotNet.Core 에 Unit, Bool 과 같은 기초 타입들 추가중

--- a/src/Nemonuri.OCamlDotNet/Core/Nemonuri.OCamlDotNet.Core.fsproj
+++ b/src/Nemonuri.OCamlDotNet/Core/Nemonuri.OCamlDotNet.Core.fsproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Prelude.fs" />
-    <Compile Include="Unit.fs" />
+    <Compile Include="Unit.fs" /><Compile Include="Bool.fs" />
     <Compile Include="Char.fs" />
     <Compile Include="Sys.fs" />
     <Compile Include="String.fs" />
