Ascii 리터럴로부터 자동 변환하는 법 없나...

--- a/src/Nemonuri.OCamlDotNet/Core/Nemonuri.OCamlDotNet.Core.fsproj
+++ b/src/Nemonuri.OCamlDotNet/Core/Nemonuri.OCamlDotNet.Core.fsproj
@@ -8,7 +8,7 @@
     <Compile Include="Unit.fs" /><Compile Include="Bool.fs" />
     <Compile Include="Char.fs" />
     <Compile Include="Sys.fs" />
-    <Compile Include="String.fs" />
+    <Compile Include="String.fs" /><Compile Include="Obj.fs" />
     <Compile Include="Stdlib.fs" />
   </ItemGroup>
   <ItemGroup>
