--- a/src/Nemonuri.FStarDotNet/Ulib/Nemonuri.FStarDotNet.Ulib.fsproj
+++ b/src/Nemonuri.FStarDotNet/Ulib/Nemonuri.FStarDotNet.Ulib.fsproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);FS3391</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
