MemoryExtensions.Split Polyfill 완료 - 아니, NET 9 부터 지원하는 API 라니;;

--- a/src/Nemonuri.NetStandards/Memory/Nemonuri.NetStandards.Memory.csproj
+++ b/src/Nemonuri.NetStandards/Memory/Nemonuri.NetStandards.Memory.csproj
@@ -15,7 +15,7 @@
         <NoWarn>$(NoWarn);CS8602</NoWarn> 
       </PropertyGroup>
       <ItemGroup>
-        <PackageReference Include="System.Memory" />
+        <PackageReference Include="Microsoft.Bcl.Memory" />
       </ItemGroup>
     </When>
   </Choose>
