좋았어. 다중 플랫폼 빌드 성공!

--- a/src/Nemonuri.ByteChars/Nemonuri.ByteChars.csproj
+++ b/src/Nemonuri.ByteChars/Nemonuri.ByteChars.csproj
@@ -13,6 +13,7 @@
     <When Condition="!$([MSBuild]::IsTargetFrameworkCompatible('$(TargetFramework)', 'net9.0'))">
       <ItemGroup>
         <PackageReference Include="PolySharp" PrivateAssets="all" />
+        <ProjectReference Include="..\Nemonuri.NetStandards\MemorySplit\Nemonuri.NetStandards.MemorySplit.csproj" />
       </ItemGroup>
       <PropertyGroup>
         <PolySharpIncludeGeneratedTypes>
@@ -53,10 +54,6 @@
   
   <ItemGroup Condition="$([MSBuild]::IsTargetFrameworkCompatible('$(TargetFramework)', 'net8.0'))">
     <PackageReference Include="System.Numerics.Tensors" />
-  </ItemGroup>
-  
-  <ItemGroup>
-    <Folder Include="Numerics\" />
   </ItemGroup>
 
 </Project>
