--- a/src/Nemonuri.NetStandards/MemorySplit/Nemonuri.NetStandards.MemorySplit.csproj
+++ b/src/Nemonuri.NetStandards/MemorySplit/Nemonuri.NetStandards.MemorySplit.csproj
@@ -15,13 +15,9 @@
         <NoWarn>$(NoWarn);CS8602</NoWarn> 
       </PropertyGroup>
       <ItemGroup>
-        <PackageReference Include="System.Memory" />
+        <PackageReference Include="Microsoft.Bcl.Memory" />
       </ItemGroup>
     </When>
   </Choose>
-  
-  <ItemGroup>
-    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" />
-  </ItemGroup>
 
 </Project>
