--- a/src/Nemonuri.FStarDotNet/Ulib/Nemonuri.FStarDotNet.Ulib.fsproj
+++ b/src/Nemonuri.FStarDotNet/Ulib/Nemonuri.FStarDotNet.Ulib.fsproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Prims.fs" /><Compile Include="FStar.Pervasives.Native.fs" /><Compile Include="FStar.UInt8.fs" /><Compile Include="FStar.String.fs" />
+    <Compile Include="Prims.fs" /><Compile Include="FStar.Pervasives.Native.fs" /><Compile Include="FStar.UInt8.fs" /><Compile Include="FStar.UInt32.fs" /><Compile Include="FStar.Char.fs" /><Compile Include="FStar.String.fs" />
   </ItemGroup>
 
   <ItemGroup>
