--- a/src/Nemonuri.OCamlDotNet/Core/Nemonuri.OCamlDotNet.Core.fsproj
+++ b/src/Nemonuri.OCamlDotNet/Core/Nemonuri.OCamlDotNet.Core.fsproj
@@ -10,7 +10,7 @@
     <Compile Include="Prelude.fs" />
     <Compile Include="Unit.fs" /><Compile Include="Bool.fs" />
     <Compile Include="Char.fs" />
-    <Compile Include="Sys.fs" />
+    <Compile Include="Sys.fs" /><Compile Include="Int.fs" /><Compile Include="List.fs" />
     <Compile Include="String.fs" /><Compile Include="Obj.fs" />
     <Compile Include="Stdlib.fs" />
   </ItemGroup>
