decompose 후 다시 compose 할 수 있도록 구현 - IByteCharPremise 인터페이스 변경

--- a/src/Nemonuri.ByteChars/Nemonuri.ByteChars.csproj
+++ b/src/Nemonuri.ByteChars/Nemonuri.ByteChars.csproj
@@ -36,6 +36,7 @@
         <PolySharpIncludeGeneratedTypes>
           $(PolySharpIncludeGeneratedTypes)
           System.Diagnostics.CodeAnalysis.NotNullWhenAttribute;
+          System.Diagnostics.CodeAnalysis.MaybeNullWhenAttribute;
         </PolySharpIncludeGeneratedTypes>
       </PropertyGroup>
       <ItemGroup>
