--- a/src/Nemonuri.FStarDotNet/Ulib/Nemonuri.FStarDotNet.Ulib.fsproj
+++ b/src/Nemonuri.FStarDotNet/Ulib/Nemonuri.FStarDotNet.Ulib.fsproj
@@ -1,18 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NoWarn>$(NoWarn);FS3391</NoWarn>
   </PropertyGroup>
-
   <ItemGroup>
-    <Compile Include="Prims.fs" /><Compile Include="FStar.Pervasives.Native.fs" /><Compile Include="FStar.UInt8.fs" /><Compile Include="FStar.UInt32.fs" /><Compile Include="FStar.Char.fs" /><Compile Include="FStar.String.fs" />
+    <Compile Include="Prelude.fs" />
+    <Compile Include="Prims.fs" />
+    <Compile Include="FStar.Pervasives.Native.fs" />
+    <Compile Include="FStar.UInt8.fs" />
+    <Compile Include="FStar.UInt32.fs" />
+    <Compile Include="FStar.Char.fs" />
+    <Compile Include="FStar.String.fs" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\..\Nemonuri.OCamlDotNet\Zarith\Nemonuri.OCamlDotNet.Zarith.fsproj" />
     <ProjectReference Include="..\..\Nemonuri.OCamlDotNet\Batteries\Nemonuri.OCamlDotNet.Batteries.fsproj" />
   </ItemGroup>
-
 </Project>
