'to_string', 'of_string' 'to_string_hex' 'to_string_hex_pad'...이걸 어쩌면 좋을까

--- a/src/Nemonuri.OCamlDotNet/Core/Nemonuri.OCamlDotNet.Core.fsproj
+++ b/src/Nemonuri.OCamlDotNet/Core/Nemonuri.OCamlDotNet.Core.fsproj
@@ -11,7 +11,7 @@
     <Compile Include="Unit.fs" /><Compile Include="Bool.fs" />
     <Compile Include="Char.fs" />
     <Compile Include="Sys.fs" /><Compile Include="Int.fs" /><Compile Include="List.fs" />
-    <Compile Include="String.fs" /><Compile Include="Obj.fs" />
+    <Compile Include="String.fs" /><Compile Include="Obj.fs" /><Compile Include="Float.fs" />
     <Compile Include="Stdlib.fs" />
   </ItemGroup>
   <ItemGroup>
