--- a/src/Nemonuri.FStarDotNet/Ulib/Nemonuri.FStarDotNet.Ulib.fsproj
+++ b/src/Nemonuri.FStarDotNet/Ulib/Nemonuri.FStarDotNet.Ulib.fsproj
@@ -5,13 +5,18 @@
     <NoWarn>$(NoWarn);FS3391</NoWarn>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Prelude.fs" />
+    
     <Compile Include="Prims.fs" />
     <Compile Include="FStar.Pervasives.Native.fs" />
+    <Compile Include="FStar.Int8.fs" />
+    <Compile Include="FStar.Int16.fs" />
     <Compile Include="FStar.UInt8.fs" />
+    <Compile Include="FStar.UInt16.fs" />
     <Compile Include="FStar.UInt32.fs" />
     <Compile Include="FStar.Char.fs" />
     <Compile Include="FStar.String.fs" />
+    <Compile Include="FStar.Float.fs" />
+    <Compile Include="FStar.List.fs" /><Compile Include="FStar.List.Tot.Base.fs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Nemonuri.OCamlDotNet\Zarith\Nemonuri.OCamlDotNet.Zarith.fsproj" />
