'빈 타입'을 void 로 나타내도 될 것 같다

--- a/src/Nemonuri.FStarDotNet/Primitives/Nemonuri.FStarDotNet.Primitives.csproj
+++ b/src/Nemonuri.FStarDotNet/Primitives/Nemonuri.FStarDotNet.Primitives.csproj
@@ -9,6 +9,7 @@
   
   <ItemGroup>
     <PackageReference Include="PolySharp" PrivateAssets="all" />
+    <PackageReference Include="CommunityToolkit.Diagnostics" />
   </ItemGroup>
   
   <PropertyGroup>
