--- a/src/Nemonuri.FStarDotNet/Primitives/Nemonuri.FStarDotNet.Primitives.csproj
+++ b/src/Nemonuri.FStarDotNet/Primitives/Nemonuri.FStarDotNet.Primitives.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
+    <TargetFrameworks Condition="$(PublishReadyToRun) == 'true'">$(TargetFrameworks);net10.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <LangVersion>14</LangVersion>
     <Nullable>enable</Nullable>
