'Type' 의 타입과 인스턴스, 'Value' 의 타입과 인스턴스를 헷갈리지 말자...

--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -42,5 +42,6 @@
     <PackageVersion Include="Microsoft.Bcl.Memory" Version="10.0.2" />
     <PackageVersion Include="System.Runtime.CompilerServices.Unsafe" Version="6.1.2" />
     <PackageVersion Include="Microsoft.Extensions.ObjectPool" Version="10.0.2" />
+    <PackageVersion Include="TypeEquality" Version="0.4.2" />
   </ItemGroup>
 </Project>
