--- a/src/Nemonuri.FStarDotNet/Primitives/Nemonuri.FStarDotNet.Primitives.csproj
+++ b/src/Nemonuri.FStarDotNet/Primitives/Nemonuri.FStarDotNet.Primitives.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="PolySharp" PrivateAssets="all" />
     <PackageReference Include="CommunityToolkit.Diagnostics" />
+    <PackageReference Include="FSharp.Core" />
   </ItemGroup>
   
   <PropertyGroup>
