'Abbreviations' 을 도입했더니, 좀 낫네...

--- a/src/Nemonuri.FStarDotNet/Ulib/Nemonuri.FStarDotNet.Ulib.fsproj
+++ b/src/Nemonuri.FStarDotNet/Ulib/Nemonuri.FStarDotNet.Ulib.fsproj
@@ -8,6 +8,7 @@
     <PackageReference Include="TypeEquality" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Primitives.fs" />
     <Compile Include="Pervasive.fs" />
     <Compile Include="TypeListAliases.fs" />
     <Compile Include="Prims.fs" />
